name:                nicesymbols
version:             0.6
synopsis:            predefined unicode symbols and ANSI escapades
license:             MIT
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scsstcd.ie
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:    NiceSymbols
  build-depends:      base
                      , containers
                      , text
  hs-source-dirs:     src/
  default-language:   Haskell2010
